Spelling homogenised changed to homogenized in xml/lang/*.lang files. Script build-dictionaries.sh was run to take the changes into effect.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+	* changed spelling homogenised to homogenized
+
 	* Explicit initialization of pointer members in g3::Model constructor
 	The bug reported by Greg Troxel: SparseMatrix <>*  A; in g3/g3_model.h
 
