--- a/xml/lang/ca/review.ca.lang
+++ b/xml/lang/ca/review.ca.lang
@@ -186,7 +186,7 @@
    ca="conté el valor m0\'/m0" />
 
 <e id="T_GaMa_interval_doesnt_contain"
-   EN="does not contain value m0\'/m0" 
+   EN="does not contain value m0\'/m0"
    ca="no conté pas el valor m0\'/m0" />
 
 <e id="T_GaMa_m0_distances"
@@ -336,7 +336,7 @@
 <e id="T_GaMa_z_angle"
    EN=" zenit "
    ca=" zenit " />
-   
+
 <e id="T_GaMa_x"
    EN=" x     "
    ca=" x     " />
@@ -434,7 +434,7 @@
    ca=" c " />
 
 <e id="T_GaMa_resobs_normality_test"
-   EN="Test of normality of homogenised residuals"
+   EN="Test of normality of homogenized residuals"
    ca="Test de normalitat dels residuals homogeneisats" />
 
 <e id="T_GaMa_resobs_condition_number"
@@ -486,11 +486,3 @@
    ca="== valor ===== terme =\n\n" />
 
 </entries>
-
-
-
-
-
-
-
-
