--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,11 @@
 GNU Gama NEWS - History of user-visible changes.
 
+
+Changes in release 2.15 (2021-09-20)
+
+  A maintenance release, no user-visible changes.
+
+
 Changes in release 2.14 (2021-02-28)
 
 * Maintainers release
