Fixed email address cepek@gnu.org in AUTHORS

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,6 @@
 Developers:
 
-    Aleš Čepek <cepek@fsv.cvut.cz>
+    Aleš Čepek <cepek@gnu.org>
         - adjustment etc.
 
     Jiří Veselý <vesely@gama.fsv.cvut.cz>
