--- a/doc/gama-download.texi
+++ b/doc/gama-download.texi
@@ -1,10 +1,10 @@
 GNU Gama  can be found in the subdirectory @code{/gnu/gama/} on
 your favourite FTP @uref{http://www.gnu.org/prep/ftp.html, GNU mirror} or
 cloned from the GIT. See our project page at
-@uref{http://savannah.gnu.org/projects/gama/, savannah} for more
+@uref{https://savannah.gnu.org/projects/gama/, savannah} for more
 information.
 
-To get an anonymous read-only access to the GIT repository for the
+To get anonymous read-only access to the GIT repository for the
 latest GNU Gama source, issue the following command
 
 @example
@@ -12,10 +12,9 @@ git clone git://git.sv.gnu.org/gama.git
 @end example
 
 
-@noindent The collection of sample networks is available separetely. To clone
-the @code{gama-local} examples from GIT use the command
-
-@example
-git clone git://git.sv.gnu.org/gama/examples.git
-@end example
-
+@c @noindent The collection of sample networks is available separetely. To clone
+@c the @code{gama-local} examples from GIT use the command
+@c
+@c @example
+@c git clone git://git.sv.gnu.org/gama/examples.git
+@c @end example
