--- a/doc/gama.texi
+++ b/doc/gama.texi
@@ -22,10 +22,14 @@
 
 @comment Part 2: Summary Description and Copyright
 
+@macro gamacopyright
+Copyright @copyright{} 2003, 2013, 2021 Aleš Čepek.
+@end macro
+
 @ifinfo
 This is a documentation version of GNU Gama @value{VERSION}.
 
-Copyright @copyright{} 2003, 2013, 2020 Aleš Čepek.
+@gamacopyright{}
 
 Permission is granted to copy, distribute and/or modify this document
 under the terms of the GNU Free Documentation License, Version 1.1 or
@@ -48,7 +52,7 @@ Free Documentation License''.
 @c The following two commands start the copyright page.
 @page
 @vskip 0pt plus 1filll
-Copyright @copyright{} 2003, 2013, 2019 Aleš Čepek.
+@gamacopyright{}
 
 Permission is granted to copy, distribute and/or modify this document
 under the terms of the GNU Free Documentation License, Version 1.1 or
