pre-release version 2.26.i

--- a/doc/gama-install.texi
+++ b/doc/gama-install.texi
@@ -27,7 +27,7 @@ build all binaries. Run
 
 @example
 $ ./configure [--bindir=DIR --infodir=DIR]
-$ make install
+$ make install [--prefix=/your/prefered/install/directory]
 @end example
 
 @noindent if you want also to install the binaries. You can use configure
