--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,25 @@
-	* gama-local option '--updated-xml' was renamed to '--export'
+2021-12-20---XXXXXX   Ales Cepek <cepek@gnu.org>
+
+	* Top level directory 'bin' was renamed to 'src'. Originally 'lib'
+	contained only gama-local.cpp, gama-g3 was added later and some
+	more helper application like gama-local-yaml2gkf also. The
+	directory was named 'bin' because autools build system puts Gama
+	application binaries there during when 'make' is run. But the
+	final destination for Gama executables is defined by the command
+	'make install' where option --prefix can change the
+	destination. Thus the directory is more important because of the
+	source codes it contains than because of the compiled binaries
+	stored there.
+
+	* Prepared gama-local for more observational correction to be
+	added in future releases. Currently only benchmark corrections for
+	height of instrument and hoieght of sight are implemented.
+
+	* Gama-local option '--updated-xml' was renamed to '--export'
 	and similarly was renamed the corresponging test
 	tests/gama-local/gama-local-export.sh
+
+	* More input examples have been added to the gama-local test suite
 
 2021-09-20   Ales Cepek <cepek@gnu.org>
 
