--- a/doc/gama.texi
+++ b/doc/gama.texi
@@ -1,7 +1,7 @@
 \input texinfo   @c -*-texinfo-*-
 @c ./gendocs.sh --email cepek@gnu.org gama "GNU Gama manual"
 
-@paragraphindent 0   @c added by AC
+@paragraphindent 0
 
 @comment Part 1 : Header
 
