--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,9 @@
 GNU Gama NEWS - History of user-visible changes.
 
+Changes in release 2.16 (2021-12-20-XXXXXXXXXX)
+
+  A maintenance release, no user-visible changes.
+
 
 Changes in release 2.15 (2021-09-20)
 
