--- a/doc/gama-local-adj.texi
+++ b/doc/gama-local-adj.texi
@@ -76,7 +76,8 @@ defines the shape of adjusted network.
 
 
 
-In the case of @emph{free network} the system (1)
+In the case of @emph{free network,} i.e. network with no fixed coordinates
+(or network without sufficient number of fixed coordinates), the system (1)
 is singular (matrix @m{A} has linearly dependent columns)
 and we have to define second regularization criterion
 @c % ++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++
@@ -498,9 +499,9 @@ dependence of the choice of actual type of reference standard deviation
 @noindent
 where @gmat{q} is the weight coefficient of the corresponding adjusted
 unknown parameter or observation. Apart from the standard deviation,
-program @code{gama-local} computes for the adjusted quantity its @emph{confidence
-interval} in which its real value is located with the probability
-@gmat{P}.
+program @code{gama-local} computes for the adjusted quantity its
+@emph{confidence interval} in which its real value is located
+with the probability@gmat{P}.
 
 @end ifnottex
 @c % --------------------------------------------------------------------
