--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,8 @@
 GNU Gama NEWS - History of user-visible changes.
 
+Changes in release 2.17 (2022-01-01)
+
+  ...
 
 Changes in release 2.16 (2021-11-25)
 
