--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2022-01-01   Ales Cepek <cepek@gnu.org>
+
+	New release 2.17
+
+	*
+
 2021-11-25   Ales Cepek <cepek@gnu.org>
 
 	New release 2.16 (maintenance release)
