fix typo Gnu --> GNU

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-# Gnu Gama
+# GNU Gama
 
 Gama is a Free Software package for geodesy and surveying, available
 under the under the GNU General Public License, version 3 or later.
